--- a/.github/workflows/validation-repo.yml
+++ b/.github/workflows/validation-repo.yml
@@ -64,14 +64,14 @@ jobs:
         run: python ci/check_quiz.py "${{ steps.detect.outputs.tf_dir }}"
 
       - name: Azure Login
-        if: steps.quiz.outcome == 'success' || steps.quiz.outcome == 'skipped'
+        if: true #steps.quiz.outcome == 'success' || steps.quiz.outcome == 'skipped'
         uses: azure/login@v1
         with:
           creds: '{"clientId":"${{ secrets.ARM_CLIENT_ID }}","clientSecret":"${{ secrets.ARM_CLIENT_SECRET }}","subscriptionId":"${{ secrets.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.ARM_TENANT_ID }}"}'
 
       - name: Setup Terraform Backend
         id: backend
-        if: steps.quiz.outcome == 'success' || steps.quiz.outcome == 'skipped'
+        if: true #steps.quiz.outcome == 'success' || steps.quiz.outcome == 'skipped'
         shell: bash
         run: |
           RAW_ID="${{ github.event.client_payload.student }}"
@@ -110,24 +110,24 @@ jobs:
 
       - name: Check Manual Steps (Azure)
         id: manual_check
-        if: (steps.quiz.outcome == 'success' || steps.quiz.outcome == 'skipped') && steps.detect.outputs.run_manual == 'true'
+        if: true #(steps.quiz.outcome == 'success' || steps.quiz.outcome == 'skipped') && steps.detect.outputs.run_manual == 'true'
         env:
           TF_VAR_student_id: ${{ github.event.client_payload.student }}
         run: |
           python ci/check_manual_steps.py "${{ steps.detect.outputs.tf_dir }}" "${{ env.TF_VAR_student_id }}" || true
 
       - name: Parse Answers to Env Vars
-        if: steps.manual_check.outcome == 'success' || steps.detect.outputs.run_manual == 'false'
+        if: true #steps.manual_check.outcome == 'success' || steps.detect.outputs.run_manual == 'false'
         run: |
           if [ -f ci/set_env.py ]; then python ci/set_env.py "${{ steps.detect.outputs.tf_dir }}"; fi
 
       - name: Create terraform.tfvars for CI
-        if: steps.manual_check.outcome == 'success' || steps.detect.outputs.run_manual == 'false'
+        if: true #steps.manual_check.outcome == 'success' || steps.detect.outputs.run_manual == 'false'
         run: |
           if [ -f ci/create_tfvars.py ]; then python ci/create_tfvars.py "${{ steps.detect.outputs.tf_dir }}"; fi
 
       - name: Setup Terraform
-        if: steps.manual_check.outcome == 'success' || steps.detect.outputs.run_manual == 'false'
+        if: true #steps.manual_check.outcome == 'success' || steps.detect.outputs.run_manual == 'false'
         uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Init
